<resources>
    <string name="app_name">Ayioh</string>
    <string name="notification_channel_name">AIO Notification Channel</string>
    <string name="notification_channel_description">Notification Channel for AIO</string>

    <string name="email_hint">Type your email here</string>
    <string name="password_hint">Type your password here</string>
    <string name="name_button">Start</string>
    <string name="return_to_main_button">Leave</string>
    <string name="event_list_toolbar">Debug: Events</string>
    <string name="task_list_toolbar">Debug: Tasks</string>
    <string name="reminder_list_toolbar">Debug: Reminders</string>
    <string name="notification_now_toolbar">Debug: Show Notification Now</string>
    <string name="notification_delay_toolbar">Debug: Show Notification Delayed</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Dialog for creating new TASKS -->
    <string name="dialog_title">Ayioh</string>
    <string name="dialog_create_task_msg">New Task</string>
    <string name="dialog_accept_task">Create</string>
    <string name="dialog_cancel_task">Cancel</string>
    <string name="dialog_new_task_name">Name</string>
    <string name="dialog_new_task_notes">Notes</string>

    <!-- Dialog for creating new EVENTS -->
    <string name="create_event_dialog_title">Ayioh</string>
    <string name="create_event_dialog_msg">New Event</string>
    <string name="create_event_dialog_accept">Create</string>
    <string name="create_event_dialog_cancel">Cancel</string>
    <string name="create_event_dialog_event_name">Name</string>
    <string name="create_event_dialog_event_notes">Notes</string>
    <string name="delete_event_dialog_title">Are you sure?</string>
    <string name="delete_event_dialog_text">Are you sure you want to delete this event?</string>

    <!-- Reminders -->
    <string name="create_reminder_dialog_msg">Add a Reminder</string>
    <string name="create_reminder_dialog_accept">Add</string>
    <string name="create_reminder_dialog_cancel">Cancel</string>
    <string name="reminder_text_days">Days</string>
    <string name="reminder_text_hours">Hours</string>
    <string name="reminder_text_minutes">Minutes</string>

    <!-- Events Fragment -->
    <string name="event_calendar_separator_text">Events</string>

    <string name="save">Save</string>

    <string name="email_tab_name">Email</string>
    <string name="calendar_tab_name">Calendar</string>
    <string name="tasks_tab_name">To-do</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
