<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/create_reminder_dialog_msg"
        android:textSize="12sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:text="@string/reminder_text_days"
            android:textColor="@color/black"
            android:gravity="center" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:text="@string/reminder_text_hours"
            android:textColor="@color/black"
            android:gravity="center" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:text="@string/reminder_text_minutes"
            android:textColor="@color/black"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_spinner_new_reminder_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:id="@+id/spinner_days_new_reminder_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="64dp" />

        <Spinner
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:id="@+id/spinner_hours_new_reminder_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="64dp" />

        <Spinner
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:id="@+id/spinner_minutes_new_reminder_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="64dp" />

    </LinearLayout>
</LinearLayout>
