<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.swugger.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorAccent"
        android:elevation="4dp"
        app:titleTextColor="@android:color/white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <EditText
        android:id="@+id/email_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_toolbar"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/password_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_text_field"
        android:hint="@string/password_hint"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/name_pass_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_text_field"
        android:layout_centerInParent="true"
        android:text="@string/name_button"
        android:onClick="toHome"/>
</RelativeLayout>
