<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/create_event_dialog_msg"
        android:textSize="12sp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/create_event_dialog_editText_name"
                android:hint="@string/create_event_dialog_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/create_event_dialog_editText_notes"
                android:hint="@string/create_event_dialog_event_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <DatePicker
                android:id="@+id/create_event_dialog_datepicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="calendar">
            </DatePicker>

            <TimePicker
                android:id="@+id/create_event_dialog_timepicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="clock">

            </TimePicker>

        </LinearLayout>

    </ScrollView>

</LinearLayout>